--- a/html/group___button.html
+++ b/html/group___button.html
@@ -192,6 +192,7 @@ Here is the caller graph for this function:</div>
 <area shape="rect" id="node2" href="group___main_menu_state.html#ga239427f0b6e850858a9b32b593f76d51" title="deletes the main menu state " alt="" coords="133,5,281,32"/>
 <area shape="rect" id="node3" href="group___game.html#ga37a3236b91e8d912939042faaec761c6" title="deletes one of the game states " alt="" coords="329,5,417,32"/>
 <area shape="rect" id="node4" href="group___game.html#gac6f1c791e766ba56f4c4df48cdaa28b7" title="deletes all game states " alt="" coords="465,5,557,32"/>
+<area shape="rect" id="node5" href="proj_8c.html#a3c04138a5bfe5d72780bb7e82a18e627" title="main" alt="" coords="605,5,656,32"/>
 </map>
 </div>
 </p>
