--- a/html/group___final_state.html
+++ b/html/group___final_state.html
@@ -145,7 +145,8 @@ Here is the call graph for this function:</div>
 <div class="dyncontent">
 <div class="center"><img src="group___final_state_gadac9c4ccef24f25bb4e302720433f22e_cgraph.png" border="0" usemap="#group___final_state_gadac9c4ccef24f25bb4e302720433f22e_cgraph" alt=""/></div>
 <map name="group___final_state_gadac9c4ccef24f25bb4e302720433f22e_cgraph" id="group___final_state_gadac9c4ccef24f25bb4e302720433f22e_cgraph">
-<area shape="rect" id="node2" href="group___bitmap.html#ga08c1d4f4fff81df260d979ea8fc1aa61" title="Destroys the given bitmap, freeing all resources used by it. " alt="" coords="169,5,268,32"/>
+<area shape="rect" id="node2" href="group___bitmap.html#ga08c1d4f4fff81df260d979ea8fc1aa61" title="Destroys the given bitmap, freeing all resources used by it. " alt="" coords="308,5,407,32"/>
+<area shape="rect" id="node3" href="group___fonts.html#ga8677101e4f86c0878cf9285fa49943d8" title="frees fonts " alt="" coords="169,31,260,57"/>
 </map>
 </div>
 </p>
@@ -157,6 +158,7 @@ Here is the caller graph for this function:</div>
 <map name="group___final_state_gadac9c4ccef24f25bb4e302720433f22e_icgraph" id="group___final_state_gadac9c4ccef24f25bb4e302720433f22e_icgraph">
 <area shape="rect" id="node2" href="group___game.html#ga37a3236b91e8d912939042faaec761c6" title="deletes one of the game states " alt="" coords="169,5,257,32"/>
 <area shape="rect" id="node3" href="group___game.html#gac6f1c791e766ba56f4c4df48cdaa28b7" title="deletes all game states " alt="" coords="305,5,397,32"/>
+<area shape="rect" id="node4" href="proj_8c.html#a3c04138a5bfe5d72780bb7e82a18e627" title="main" alt="" coords="445,5,496,32"/>
 </map>
 </div>
 </p>
@@ -446,11 +448,12 @@ Here is the call graph for this function:</div>
 <div class="dyncontent">
 <div class="center"><img src="group___final_state_ga0c55155d6d378225e7ed9196e3f75b83_cgraph.png" border="0" usemap="#group___final_state_ga0c55155d6d378225e7ed9196e3f75b83_cgraph" alt=""/></div>
 <map name="group___final_state_ga0c55155d6d378225e7ed9196e3f75b83_cgraph" id="group___final_state_ga0c55155d6d378225e7ed9196e3f75b83_cgraph">
-<area shape="rect" id="node2" href="group___final_state.html#gaa92da85e54f36348f8bbac34f70d7685" title="defines a new high score and saves it to a text file " alt="" coords="178,31,283,57"/>
-<area shape="rect" id="node6" href="group___final_state.html#gaaf50b1193f56573a9651da889fcb1b17" title="reads from a file the highest scores achivied before " alt="" coords="173,81,288,108"/>
-<area shape="rect" id="node3" href="group___r_t_c.html#gad541628ec8bd836bbd3b2eefd316069b" title="subscribes rtc interruptions " alt="" coords="336,5,436,32"/>
-<area shape="rect" id="node4" href="group___r_t_c.html#gaeba64915bd008b68943940bc3c0d8f87" title="reads rtc date and saves it no a string " alt="" coords="339,56,433,83"/>
-<area shape="rect" id="node5" href="group___r_t_c.html#ga788e56085fe57e083210ad3c8887ecb1" title="waits until it receives a valid rtc " alt="" coords="484,56,583,83"/>
+<area shape="rect" id="node2" href="group___mouse.html#gabb62339e13d96f9050f69a71428f8eb9" title="unsubscribes mouse interruption " alt="" coords="173,5,312,32"/>
+<area shape="rect" id="node3" href="group___final_state.html#gaa92da85e54f36348f8bbac34f70d7685" title="defines a new high score and saves it to a text file " alt="" coords="190,56,295,83"/>
+<area shape="rect" id="node7" href="group___final_state.html#gaaf50b1193f56573a9651da889fcb1b17" title="reads from a file the highest scores achivied before " alt="" coords="185,107,300,133"/>
+<area shape="rect" id="node4" href="group___r_t_c.html#gad541628ec8bd836bbd3b2eefd316069b" title="subscribes rtc interruptions " alt="" coords="360,31,460,57"/>
+<area shape="rect" id="node5" href="group___r_t_c.html#gaeba64915bd008b68943940bc3c0d8f87" title="reads rtc date and saves it no a string " alt="" coords="363,81,457,108"/>
+<area shape="rect" id="node6" href="group___r_t_c.html#ga788e56085fe57e083210ad3c8887ecb1" title="waits until it receives a valid rtc " alt="" coords="508,81,607,108"/>
 </map>
 </div>
 </p>
