--- a/html/group___score.html
+++ b/html/group___score.html
@@ -149,6 +149,7 @@ Here is the caller graph for this function:</div>
 <area shape="rect" id="node2" href="group___game_state.html#ga43079b63c96e8f588be2a9afc938e8e2" title="deletes the game state " alt="" coords="144,5,267,32"/>
 <area shape="rect" id="node3" href="group___game.html#ga37a3236b91e8d912939042faaec761c6" title="deletes one of the game states " alt="" coords="315,5,403,32"/>
 <area shape="rect" id="node4" href="group___game.html#gac6f1c791e766ba56f4c4df48cdaa28b7" title="deletes all game states " alt="" coords="451,5,543,32"/>
+<area shape="rect" id="node5" href="proj_8c.html#a3c04138a5bfe5d72780bb7e82a18e627" title="main" alt="" coords="591,5,641,32"/>
 </map>
 </div>
 </p>
