--- a/html/group___game_state.html
+++ b/html/group___game_state.html
@@ -263,6 +263,7 @@ Here is the caller graph for this function:</div>
 <map name="group___game_state_ga43079b63c96e8f588be2a9afc938e8e2_icgraph" id="group___game_state_ga43079b63c96e8f588be2a9afc938e8e2_icgraph">
 <area shape="rect" id="node2" href="group___game.html#ga37a3236b91e8d912939042faaec761c6" title="deletes one of the game states " alt="" coords="176,5,264,32"/>
 <area shape="rect" id="node3" href="group___game.html#gac6f1c791e766ba56f4c4df48cdaa28b7" title="deletes all game states " alt="" coords="312,5,404,32"/>
+<area shape="rect" id="node4" href="proj_8c.html#a3c04138a5bfe5d72780bb7e82a18e627" title="main" alt="" coords="452,5,503,32"/>
 </map>
 </div>
 </p>
