--- a/html/group___mouse.html
+++ b/html/group___mouse.html
@@ -371,9 +371,10 @@ Here is the caller graph for this function:</div>
 <div class="dyncontent">
 <div class="center"><img src="group___mouse_gabb62339e13d96f9050f69a71428f8eb9_icgraph.png" border="0" usemap="#group___mouse_gabb62339e13d96f9050f69a71428f8eb9_icgraph" alt=""/></div>
 <map name="group___mouse_gabb62339e13d96f9050f69a71428f8eb9_icgraph" id="group___mouse_gabb62339e13d96f9050f69a71428f8eb9_icgraph">
-<area shape="rect" id="node2" href="group___game.html#gaa084be0a7a59a117e203a6ae74f04fa2" title="updates the game " alt="" coords="392,5,488,32"/>
-<area shape="rect" id="node4" href="group___main_menu_state.html#ga09372f78f7edf6c5597f5ef15cb90860" title="updates the main menu " alt="" coords="192,31,344,57"/>
-<area shape="rect" id="node3" href="proj_8c.html#a3c04138a5bfe5d72780bb7e82a18e627" title="main" alt="" coords="536,5,587,32"/>
+<area shape="rect" id="node2" href="group___final_state.html#ga0c55155d6d378225e7ed9196e3f75b83" title="updates the final state " alt="" coords="208,5,328,32"/>
+<area shape="rect" id="node3" href="group___game.html#gaa084be0a7a59a117e203a6ae74f04fa2" title="updates the game " alt="" coords="392,56,488,83"/>
+<area shape="rect" id="node5" href="group___main_menu_state.html#ga09372f78f7edf6c5597f5ef15cb90860" title="updates the main menu " alt="" coords="192,107,344,133"/>
+<area shape="rect" id="node4" href="proj_8c.html#a3c04138a5bfe5d72780bb7e82a18e627" title="main" alt="" coords="536,56,587,83"/>
 </map>
 </div>
 </p>
